fixed failed to launch modular project